# XnneHangLab

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  404.html  ACGO.yaml  AGENTS.md  CNAME  CONTRIBUTING.md  LICENCE  PLAN.md  README.md  UPDATELOG.md  _typos.toml  acgo.toml  acgo.yaml  hashmap.json  importtime_server_after.txt  index.html  justfile  plan-tts-emotion-editor.html  pyproject.toml  run_server.py  test.txt  warnings_config.py
.github/: copilot-instructions.md
.github/workflows/: fmt-and-lint.yml  unit-test.yml  vitepress-deploy.yml
architecture/: system-prompt-layers.html
assets/: app.1OLzM-cl.js  app.1w5VKQOq.js  app.Aks5exGe.js  app.BAcjNCI0.js  app.BKeZ_fL6.js  app.BSDJjmHE.js  app.BURIGJf9.js  app.BVegWNgS.js  app.BX5i6Xqy.js  app.BYJ9cD7I.js  app.BYl2xYi7.js  app.B_rvu_bs.js  app.BatAjxj0.js  app.BhgI7o5z.js  app.BkMfEpNy.js  app.Bm5oxy_y.js  app.BxWstZP4.js  app.Bxa2sY7Y.js  app.C-bH6xcS.js  app.C4ONgaw6.js  app.CNBWfMxn.js  app.CNyUuYLb.js  app.CSItI_kT.js  app.CUfpVoS1.js  app.CWCa58Za.js  app.CaCPnQFQ.js  app.CkXgo6DZ.js  app.CkaMRzHI.js  app.ClMV0f5H.js  app.CmuPJMji.js  app.CuRE4DHK.js  app.CufDHRNR.js  app.Cx-fUE9-.js  app.D02SuADV.js  app.D3BWwJPe.js  app.D4__4GB3.js  app.D7Qma53f.js  app.DT6JCW35.js  app.DU9IdV52.js  app.Ei1zqHng.js  (+322 more)
assets/chunks/: @localSearchIndexroot.1BidBQHk.js  @localSearchIndexroot.1Ht8w8u3.js  @localSearchIndexroot.1rqxFJK1.js  @localSearchIndexroot.B0Avmk9I.js  @localSearchIndexroot.B1Qv-Tgj.js  @localSearchIndexroot.B5uSLG6x.js  @localSearchIndexroot.BE_VULxU.js  @localSearchIndexroot.BHLDQ4ii.js  @localSearchIndexroot.BNhfyMYd.js  @localSearchIndexroot.BXSEjM11.js  @localSearchIndexroot.BZyeZ0cQ.js  @localSearchIndexroot.BmMXBxSn.js  @localSearchIndexroot.BnGHr4yD.js  @localSearchIndexroot.Bp5-GrOz.js  @localSearchIndexroot.BtNsgxFz.js  @localSearchIndexroot.BumP5o4x.js  @localSearchIndexroot.Bx00jfGm.js  @localSearchIndexroot.C-eo4jPR.js  @localSearchIndexroot.C4dr9vvO.js  @localSearchIndexroot.C7ukIArA.js  @localSearchIndexroot.C9Y2uaZ1.js  @localSearchIndexroot.C9oVZ_KR.js  @localSearchIndexroot.CCWHWhzn.js  @localSearchIndexroot.CDSKOR1A.js  @localSearchIndexroot.CE07-ptR.js  @localSearchIndexroot.CEVaFW2C.js  @localSearchIndexroot.CGMR0IAY.js  @localSearchIndexroot.CJZt6mjg.js  @localSearchIndexroot.CSMVruHc.js  @localSearchIndexroot.CVTwHVdB.js  @localSearchIndexroot.CfWY8SM0.js  @localSearchIndexroot.CfzK4gon.js  @localSearchIndexroot.CmbgPtHT.js  @localSearchIndexroot.Cr-XJ9ZC.js  @localSearchIndexroot.CuFi27C8.js  @localSearchIndexroot.CvxffLnW.js  @localSearchIndexroot.D-dhE17W.js  @localSearchIndexroot.DFu3f7JW.js  @localSearchIndexroot.DKNN5e6c.js  @localSearchIndexroot.D_GfFOd9.js  (+107 more)
config/: acgo.toml  agent.toml  audio.toml  bert_vits.toml  bert_vits.yaml  font.txt  funasr.toml  global.toml  gsv_config.json  lab.toml  live2d_presets.json  mbti_questions.json  package.toml  root.toml  todo.toml  todo_data_simplified.json  uiya.toml  video.toml  vtuber.yaml
config/mbti_results/: baoqiao.json
config/voices/: luming.toml
data/memory/: MEMORY.md
docs/: cli.md  deploy.md  fastapi.md  index.md  issue.md  neo4j_import_v0.md  package.json  plan-tts-emotion-editor.md  settings.md  vtuber.md
docs-legacy/: deploy.md
docs-legacy/ai/: memory_agent.md
docs-site/: package.json
docs-site/guide/: cli.md  fastapi.md  issue.md  settings.md
docs-site/memory-bench/: typing-design.md
docs/.vitepress/: config.ts
docs/architecture/: memory_agent.md  system-prompt-layers.md
docs/guide/: branches.md  cli.md  contributing.md  deploy.md  fastapi.md  intro.md  issue.md  roadmap.md  settings.md  translate.md
docs/memory-bench/: scripts-guide.md
docs/presentation/: README.md  index.md
guide/: branches.html  cli.html  contributing.html  deploy.html  fastapi.html  intro.html  issue.html  neo4j-import.html  roadmap.html  settings.html  translate.html
guide/architecture/: agent-core.html  agent.html  api.html  asr.html  config.html  conversations.html  index.html  mcp.html  memory-agent.html  (+5 more)
memory-bench/: index.html  neo4j-import.html  scripts-guide.html  typing-design.html
memory_bench/: .env.benchmark  .env.benchmark.example  .env.server.example  README.md  __init__.py  dashboard.json  docker-compose.neo4j.yml  pyproject.toml
models/: download.md
profiles/: baoqiao.toml  congyin.toml  elaina.toml  luoqixi.toml  satone_aichat.toml  songyin.toml  vtuber.toml
prompts/: README.md  elaina.txt  memory_assistant.txt  paimeng.txt  tool_prompt.txt  vision_prompt.txt
raw_audio/: example.mp4.REMOVED.git-id  example.wav.REMOVED.git-id
scripts/: download.py  gsv_batch_generate.py  lab_download.py  list_model_name.py  prepare_gsv_batch_input.py  qwen_tts_batch_generate.py  reload_lab_setting.py  sync_apikey.py  sync_plugin_config_metadata.py  test_openai_qwen_tts_client.py  test_qwen_tts_client.py  test_sentence_divider.py  tts_bench.py  tts_check.py  tts_offline.py  tts_stream.py  tts_stream_play.py
tests/: test_admin_api.py  test_agent_tts_config.py  test_asr_client_fallback.py  test_asr_combiner.py  test_asr_converters.py  test_asr_cutter.py  test_asr_request.py  test_asr_request_model.py  test_build_index.py  test_builtin_tools.py  test_config_scripts.py  test_config_version.py  test_control_tag_pipeline.py  test_conversation_tts_ordering.py  test_genie_tts_inference.py  test_genie_tts_loading.py  test_genie_tts_speaker_config.py  test_gpt_sovits_profile_selection.py  test_gpt_sovits_speaker_config.py  test_gsv_lite_loading.py  test_gsv_lite_retry.py  test_gsv_lite_route.py  test_gsv_lite_speaker_config.py  test_gsv_package_compat.py  test_history_storage.py  test_interrupt_history_loading.py  test_live2d_control_plugin.py  test_llm_reasoning.py  test_message_handler.py  test_mood_chat_timing.py  test_nlp_gte_sentence_embedding.py  test_packages.py  test_paraform_asr.py  test_plugin_config_schema.py  test_profile_validation.py  test_qwen_tts.py  test_qwen_tts_loading.py  test_qwen_tts_quick.py  test_qwen_tts_speaker_config.py  test_screen_state_observer_plugin.py  (+16 more)
(+607 files in other folders)
