[project]
name = "XnneHangLab"
version = "0.0.5"
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "tomli_w>=1.2.0",
    "tomli>=2.2.1",
    "pydantic>=2.10.6",
    "streamlit>=1.43.2",
    "streamlit-antd-components>=0.3.2",
    "pandas==2.2.3",
    # special for fastapi
    "fastapi[standard]>=0.115.8",
    "uvicorn[standard]>=0.35.0",
    "python-multipart>=0.0.20",
    "websocket-client>=1.8.0",
    "socksio>=1.0.0",
    "loguru>=0.7.3",
    "fastmcp>=2.10.4",
    # "google-genai>=1.25.0",
    "typing-extensions>=4.15.0",
    "python-dotenv>=1.1.1",
    "bs4>=0.0.2",
    "grpcio==1.78.0",
    "llama-cpp-python>=0.3.0",
    "modelscope>=1.23.1",
]
authors = [{ name = "MrXnneHang", email = "XnneHang@gmail.com" }]
keywords = []
license = { text = "MIT" }
classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/XnneHangLab/XnneHangLab"
Documentation = "https://github.com/XnneHangLab/XnneHangLab"
Repository = "https://github.com/XnneHangLab/XnneHangLab"
Issues = "https://github.com/XnneHangLab/XnneHangLab/issues"

[project.scripts]
test = "lab.test:main"
get_root = "lab.config_manager.abs_root:main" # 获取项目所在根目录绝对路径, 防止 streamlit UI 中默认以 `.` 作为根目录而找不到一些文件.
package = "lab.config_manager.package:main"
agent_setting = "lab.config_manager.agent:main"
tmp = "lab.tmp:main" # debug 时随意写的一些脚本

[dependency-groups]
base = [
  "numpy==1.26.4",
  "torch==2.6",
  "torchaudio==2.6",
  "transformers>=4.57",
]

sherpa-onnx = [
  "sherpa-onnx>=1.12.29",
]

qwen-asr = [
  "modelscope>=1.25.0",
  "openvino>=2024.0",
  "qwen-asr",
  "nagisa>=0.2.11",
  "soundfile>=0.13.1",
  "tokenizers>=0.13",
]

dev = [
  "pyright>=1.1.391",
  "ruff>=0.9.3",
  "pytest>=8.3.4",
  "pytest-rerunfailures>=15.0",
]


yutto-uiya = [
  "uiya-yutto==0.0.2-rc.2",
  # "yutto==2.0.3",
  "httpx[http2,socks]>=0.28.1",
  "pexpect==4.9.0;sys_platform!='win32'",
  "wexpect-uv==0.0.6;sys_platform=='win32'",
  # "wexpect-uv;sys_platform=='win32'",
  "natsort>=8.4.0",
]

# 如果希望使用 tts 比如 gpt_sovits 均需要加入以下前置
tts_base = [
  "librosa>=0.10.2,<0.12",
  "g2p-en>=2.1.0",
  "cn2an>=0.5.23",
  "pypinyin>=0.54.0",
]

gpt_sovits = [
  "socksio>=1.0.0",
  "pytorch-lightning>=2.5.2",
  "einops>=0.8.1",
  "tqdm>=4.67.1",
  "wordsegment>=1.3.1",
  "langsegment",
  "jieba-fast>=0.53",
  "pyopenjtalk>=0.4.1",
  "ffmpeg-python>=0.2.0",
  "soundfile>=0.13.1",
  "pydub>=0.25.1",
  "scipy>=1.16.0",
]

vtuber = [
  "socksio>=1.0.0",
  "chardet>=5.2.0",
  "pydub>=0.25.1",
  "langdetect>=1.0.9",
  "pysbd>=0.3.4",
  "aiohttp>=3.12.13",
  "openai>=1.93.0",
  "soundfile>=0.13.1",
]

memory_bench = [
  # Pin Mem0 because replay_mem0 monkey-patches internal vector_store.update behavior
  # for the NONE-event/vector=None bug path. Version drift may break this workaround.
  "mem0ai==1.0.3",
  # Memory Chat Server dependencies (keep versions aligned with top-level [project.dependencies])
  "fastapi[standard]>=0.115.8",
  "uvicorn[standard]>=0.35.0",
  "openai>=1.93.0",
  "python-dotenv>=1.1.1",
  "pydantic>=2.10.6",
  # for original neo4j graph
  "langchain-neo4j>=0.3.0",
  "rank-bm25>=0.2.2",
]

qwen-tts = [
  "faster-qwen3-tts>=0.2.4",
  "soxr>=1.0.0",
  "sounddevice>=0.5.2",
]

[tool.uv]
default-groups = ["base", "qwen-asr", "dev", "yutto-uiya", "tts_base", "gpt_sovits", "qwen-tts", "vtuber", "memory_bench", "sherpa-onnx"]

[tool.uv.workspace]
members = ["packages/yutto-uiya","packages/todo/","packages/gpt_sovits","packages/Qwen3-ASR"]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "llama-cpp-cpu"
url = "https://abetlen.github.io/llama-cpp-python/whl/cpu"
format = "flat"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'win32'" }, # sys_platform : 'win32' , 'linux' , 'Darwin'
  { index = "pytorch-cpu", marker = "sys_platform != 'win32'"}
]
torchaudio = [
  { index = "pytorch-cu118", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform != 'win32'"}
]
llama-cpp-python = { index = "llama-cpp-cpu" }
langsegment = { path = "./dist/LangSegment-0.3.5-py3-none-any.whl"}
qwen-asr = {  workspace = true }

# 这个源要与 yutto-uiya 保持一致, 要改, 得同时改
# yutto = { git = "https://github.com/MrXnneHang/yutto.git", rev = "parse" }
# yutto = { path = "./packages/yutto/dist/yutto-2.0.3-py3-none-any.whl"}
# wexpect-uv = {path="./packages/wexpect-uv/dist/wexpect_uv-0.0.4-py3-none-any.whl"}

[tool.pyright]
include = ["src/lab","tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
  # Pyflakes
  "F",
  # Pycodestyle
  "E",
  "W",
  # Isort
  "I",
  # Comprehensions
  "C4",
  # Debugger
  "T100",
  # Pyupgrade
  "UP",
  # Flake8-pyi
  "PYI",
  # Bugbear
  "B",
  # Pylint
  "PLE",
  # Flake8-simplify
  "SIM101",
  # Flake8-use-pathlib
  "PTH",
  # Pygrep-hooks
  "PGH004",
  # Flake8-type-checking
  "TC",
  # Flake8-raise
  "RSE",
  # Refurb
  "FURB",
  # Flake8-future-annotations
  "FA",
  # Yesqa
  "RUF100",
]
ignore = [
  "E501", # line too long, duplicate with ruff fmt
  "F401", # imported but unused, duplicate with pyright
  "F841", # local variable is assigned to but never used, duplicate with pyright
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
known-first-party = ["lab"]
combine-as-imports = true

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]


[tool.hatch.build.targets.wheel]

packages = ["src/lab","packages/todo/src/todo","packages/yutto-uiya/src/uiya","packages/gpt_sovits/src/gsv","memory_bench"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 选取的该版本 Pytorch 仅仅支持 310 311.
# < 3.11 需要额外安装 tomlilib 
# < 3.11 不支持 *tuple 的解包。(_dataclass.py 中涉及)
# 于是，该项目只能在 3.11 运行，3.12 及以上需要考虑手动升级 pytorch。

# 因为本项目主体是用于 UI, 为了防止响应时间过长所以不少地方用到了 lazy-import 来处理 torch, funasr, pandas 等复杂库. 这些库导入在计算力比较低的库上几乎需要四五秒乃至更久的时间.
# 如果你需要用于批处理, 或者要求响应速度比较快的, 那么可以考虑优化这些 lazy-import 的地方, 所有 lazy-import 均有用 `# Lazy-import` 标注, 你可以快速搜索.
